--- a/static/common/main.css
+++ b/static/common/main.css
@@ -53,11 +53,11 @@ ol, ul {
 */
 
 body {
-  /*background: url(timg.jpg);*/
   background-color:#f6f6f6;
   background-repeat:no-repeat;
   color: black;
 }
+/*
 .flat-form-nouse {
   background: #6a6a6a;
   margin: 25px auto;
@@ -66,11 +66,6 @@ body {
   position: relative;
 }
 .flat-form {
-  /*background: #6a6a6a;
-  #margin: 0;
-  #width: 100%;
-  #height: 100%;
-  #position: relative;*/
   padding: 3% 1% 3% 3%;
 }
 .1banner{
@@ -108,16 +103,13 @@ body {
 }
 
 .tabs li {
-  /*background-color: #222222;*/
   display: block;
   float: left;
   margin: 0;
   width: 100%;
   text-align: center;
-  /*padding: 0px 0px 0px 22px;*/
 }
 .tabs-nouse a {
-/*background: #c0392b;*/
   display: block;
   float: left;
   text-decoration: none;
@@ -125,18 +117,9 @@ body {
   text-align: center;
   font-size: 16px;
   padding: 12px 22px 12px 22px;
-  /*border-right: 1px solid @tab-border;*/
 
 }
 .tabs a {
-      /*
-  #background: #c0392b;
-  #display: block;
-  #float: left;
-  #text-decoration: none;
-  #padding: 12px 22px 12px 22px;
-  border-right: 1px solid @tab-border;
-  */
   color: grey;
   text-align: center;
   font-size: 24px;
@@ -144,14 +127,10 @@ body {
 }
 .tabs-nouse li:last-child a {
   border-right: none;
-  /*padding-left: 0;*/
-  /*padding-right: 0;*/
   text-align: center;
 }
 .tabs li:last-child  a {
   border-right: none;
-  /*padding-left: 0;*/
-  /*padding-right: 0;*/
   text-align: left;
 }
 .tabs-nouse a.active {
@@ -162,7 +141,6 @@ body {
 	transition: all 0.5s linear;
 }
 .tabs a.active {
-  /*background: #5cb85c;*/
   width:100%;
   color: green;
   border-right: none;
@@ -171,7 +149,6 @@ body {
 	transition: all 0.5s linear;
 }
 .tabs a:hover {
-  /*background: #5cb85c;*/
   width:100%;
   color: black;
   border-right: none;
@@ -200,7 +177,7 @@ form input[type=text],
 form input[type=password],
 form input[type=submit] {
 }
-
+*/
 /*
 form input[type=text],
 form input[type=password] {
@@ -215,6 +192,7 @@ form input[type=password] {
 }
 */
 
+/*
 .dark-box {
   background: #5e0400;
   box-shadow: 1px 3px 3px #3d0100 inset;
@@ -288,6 +266,7 @@ form input[type=password] {
 .askmodal .font-center{
     text-align:center;
 }
+*/
 .QuestionFrame{
     padding:2%;
     word-wrap:break-word;
@@ -309,6 +288,7 @@ form input[type=password] {
 .popover{
     max-width: 100%;
 }
+
 .ProfileHeader{
     width:1000px;
     -webkit-box-sizing: content-box;
@@ -797,6 +777,163 @@ label {
 .btn-group:focus{
     border-color: #aaa !important;
 }
+
+/*----for article----------------*/
+.ContentItem-time{margin-top:10px;font-size:14px;color:#8590a6}
+.ContentItem-time a:hover{border-bottom:1px solid rgba(133,144,166,.72)}
+html[data-theme=dark] .ContentItem-time a:hover{border-bottom:1px solid rgba(96,106,128,.72)}
+html[data-theme=dark] .ContentItem-time{color:#606a80}
+
+.TopicList{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+.TopicList .Topic:not(:last-child){margin-right:5px}
+.TopicList .Topic+.Topic{vertical-align:middle}
+.PostIndex-showReviewerButton{margin-left:2px}
+.PostIndex-reviewers-userlink-wrapper{display:inline-block}
+.TitleImage{display:block;margin:16px auto 0;width:690px}
+@media (max-width:690px){.TitleImage{margin-top:0;width:100%}
+}
+.TitleImage--fullScreen{width:100%;padding-bottom:33.3%;background-size:cover;background-position:50%;margin-top:0}
+@media (min-width:690px){.TitleImage--fullScreen{padding-top:52px}
+}
+
+.Post-Author{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+.Post-Author .AuthorInfo{-webkit-box-flex:1;-ms-flex:1;flex:1;white-space:nowrap;overflow:hidden}
+.Post-Author .AuthorInfo-name{color:#444}
+html[data-theme=dark] .Post-Author .AuthorInfo-name{color:gray}
+.Post-Author .AuthorInfo-detail{color:#646464}
+html[data-theme=dark] .Post-Author .AuthorInfo-detail{color:#999}
+@media (max-width:690px){.Post-Author .AuthorInfo-name>.Popover>div{max-width:80px;vertical-align:top;overflow:hidden;text-overflow:ellipsis}
+}
+.Post-Author-Mobile{margin:0;padding:11.5px;border-bottom-color:#d3d3d3;border-bottom-style:solid;border-bottom-width:1px}
+@media (-webkit-min-device-pixel-ratio:2),(min-resolution:192dpi){.Post-Author-Mobile{border-bottom-width:.5px}
+}
+@media (-webkit-min-device-pixel-ratio:3),(min-resolution:288dpi){.Post-Author-Mobile{border-bottom-width:.33333px}
+}
+@media (-webkit-min-device-pixel-ratio:4),(min-resolution:384dpi){.Post-Author-Mobile{border-bottom-width:.25px}
+}
+.Post-Author-Mobile .FollowButton{font-weight:600;font-synthesis:style;padding:0 12px;min-width:72px;line-height:30px}
+html[data-ios] .Post-Author-Mobile .FollowButton{font-weight:500}
+html[data-android] .Post-Author-Mobile .FollowButton{font-weight:700}
+html[data-theme=dark] .Post-Author-Mobile{border-bottom-color:#2e2e2e}
+
+.BlockTitle{font-weight:600;font-synthesis:style;line-height:1.375;font-size:16px;color:#1a1a1a;border-color:#ebebeb;border-bottom-style:solid;border-width:1px;padding-bottom:12px;margin-top:40px}
+html[data-ios] .BlockTitle{font-weight:500}
+html[data-android] .BlockTitle{font-weight:700}
+@media (-webkit-min-device-pixel-ratio:2),(min-resolution:192dpi){.BlockTitle{border-width:.5px}
+}
+@media (-webkit-min-device-pixel-ratio:3),(min-resolution:288dpi){.BlockTitle{border-width:.33333px}
+}
+@media (-webkit-min-device-pixel-ratio:4),(min-resolution:384dpi){.BlockTitle{border-width:.25px}
+}
+html[data-theme=dark] .BlockTitle{color:#999;border-color:#444}
+
+.MobilePostItem{display:-webkit-box;display:-ms-flexbox;display:flex;position:relative;border-color:#ebebeb;border-bottom-style:solid;border-width:1px}
+@media (-webkit-min-device-pixel-ratio:2),(min-resolution:192dpi){.MobilePostItem{border-width:.5px}
+}
+@media (-webkit-min-device-pixel-ratio:3),(min-resolution:288dpi){.MobilePostItem{border-width:.33333px}
+}
+@media (-webkit-min-device-pixel-ratio:4),(min-resolution:384dpi){.MobilePostItem{border-width:.25px}
+}
+html[data-theme=dark] .MobilePostItem{border-color:#444}
+.MobilePostItem-TitleImage{overflow:hidden;-o-object-fit:cover;object-fit:cover;border-radius:4px;vertical-align:top;width:113px;margin:16px auto 16px 10px;height:75px}
+.MobilePostItem-Description{-webkit-box-flex:1;-ms-flex:1;flex:1;width:54%;margin:17.5px 10px 17.5px 0}
+.MobilePostItem-Title{font-size:17px;line-height:1.5;font-weight:600;font-synthesis:style;color:#1a1a1a;display:-webkit-box;text-overflow:ellipsis;overflow:hidden;-webkit-line-clamp:2;-webkit-box-orient:vertical}
+html[data-ios] .MobilePostItem-Title{font-weight:500}
+html[data-android] .MobilePostItem-Title{font-weight:700}
+html[data-theme=dark] .MobilePostItem-Title{color:#999}
+.MobilePostItem-Summary{padding:4px 0;line-height:18.5px;font-size:14px;color:#444;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
+html[data-theme=dark] .MobilePostItem-Summary{color:gray}
+.MobilePostItem-Footer{padding-top:4px;font-size:13px;color:#999;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+html[data-theme=dark] .MobilePostItem-Footer{color:#646464}
+.MobilePostItem-edited{border:1px solid #999;padding:1px 5px;font-size:10px;margin-right:7px;border-radius:4px}
+html[data-theme=dark] .MobilePostItem-edited{border:1px solid #646464}
+.PostItem{height:226px;width:245px;min-width:245px;border-radius:5px;box-shadow:0 6px 14px 0 rgba(26,26,26,.06);background:#fff;margin-right:14px;position:relative;overflow:hidden;transition:-webkit-transform .3s;transition:transform .3s;transition:transform .3s,-webkit-transform .3s}
+.PostItem:hover{-webkit-transform:scale(1.04);transform:scale(1.04);z-index:9}
+html[data-theme=dark] .PostItem{box-shadow:0 6px 14px 0 hsla(0,0%,60%,.06);background:#1a1a1a}
+.PostItem-TitleImage{height:123px;width:245px;-o-object-fit:cover;object-fit:cover;border-top-left-radius:5px;border-top-right-radius:5px}
+.PostItem-Title{font-weight:600;font-synthesis:style;font-size:16px;min-width:225px;color:#1a1a1a;line-height:22px;margin:12px;display:-webkit-box;text-overflow:ellipsis;overflow:hidden;-webkit-line-clamp:2;-webkit-box-orient:vertical}
+html[data-ios] .PostItem-Title{font-weight:500}
+html[data-android] .PostItem-Title{font-weight:700}
+html[data-theme=dark] .PostItem-Title{color:#999}
+.PostItem-Summary{font-size:14px;color:#1a1a1a;line-height:20px;margin:8px 12px;display:-webkit-box;-webkit-line-clamp:6;-webkit-box-orient:vertical;max-height:118px;overflow:hidden}
+html[data-theme=dark] .PostItem-Summary{color:#999}
+.PostItem-Footer{position:absolute;bottom:12px;left:12px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;width:100%;font-size:14px;color:#8590a6;line-height:20px}
+html[data-theme=dark] .PostItem-Footer{color:#606a80}
+.PostItem-FooterTitle{margin-right:24px}
+.PagingButton{width:48px;height:48px;border-radius:100px;background:#fff;box-shadow:0 6px 13px 0 rgba(26,26,26,.06);display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;cursor:pointer;margin-top:90px}
+.PagingButton:hover{-webkit-transform:scale(1.04);transform:scale(1.04);z-index:9}
+.PagingButton:disabled{visibility:hidden}
+html[data-theme=dark] .PagingButton{background:#1a1a1a;box-shadow:0 6px 13px 0 hsla(0,0%,60%,.06)}
+.PagingButton-Next{margin-left:40px}
+.PagingButton-Previous{margin-right:40px}
+.Recommendations-Main{background:#f6f6f6;position:relative;margin:24px auto!important}
+html[data-theme=dark] .Recommendations-Main{background:#2e2e2e}
+.Recommendations-List{display:-webkit-box;display:-ms-flexbox;display:flex;margin:32px auto;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}
+@media (min-width:690px){.Recommendations-BlockTitle{width:690px;margin:24px auto 4px}
+}
+
+.Post-content{background:#fff}
+@media (max-width:690px){.Post-content{padding-top:0}
+}
+@media (min-width:690px){.Post-content{min-width:1000px;overflow:hidden}
+}
+html[data-theme=dark] .Post-content{background:#1a1a1a}
+.ContentItem-time{padding:16px 0}
+@media (max-width:690px){.ContentItem-time{margin-top:10px}
+}
+.Post-NormalMain .Post-Header,.Post-NormalMain>div{overflow:hidden;width:690px;margin:0 auto}
+.Post-NormalMain .Comments-container{border-top:52px solid transparent;margin:-52px auto 0!important}
+.Post-NormalMain .Comments-pattern-loading{height:100vh}
+.PostIndex-Contributes{margin-bottom:-8px!important;padding-top:30px}
+.PostIndex-Contributes .BlockTitle{margin-top:0}
+.Post-Main{box-sizing:border-box;overflow:hidden}
+@media (max-width:690px){.Post-Main{width:100%;padding:0 16px 16px}
+}
+.Post-Main .Post-topicsAndReviewer{display:-webkit-box;display:-ms-flexbox;display:flex}
+.Post-Main .ContentItem-actions.is-fixed{margin:0}
+.Post-Main .Post-Title{font-weight:600;font-synthesis:style;font-size:24px;line-height:1.22;margin:24px 0}
+html[data-ios] .Post-Main .Post-Title{font-weight:500}
+html[data-android] .Post-Main .Post-Title{font-weight:700}
+@media (max-width:690px){.Post-Main .Post-Title{margin:16px 0}
+}
+.Post-Main .Post-TimeExtra{font-weight:600;font-synthesis:style;font-size:16px;line-height:1.2;color:#8590a6}
+html[data-ios] .Post-Main .Post-TimeExtra{font-weight:500}
+html[data-android] .Post-Main .Post-TimeExtra{font-weight:700}
+.Post-Main .Post-TimeExtra a{color:#0084ff}
+html[data-theme=dark] .Post-Main .Post-TimeExtra a{color:#3a76d0}
+html[data-theme=dark] .Post-Main .Post-TimeExtra{color:#606a80}
+.Post-Main .PostIndex-warning{position:relative;margin-top:24px;padding:16px;box-shadow:0 2px 4px rgba(26,26,26,.06);border:1px solid #d3d3d3;border-radius:4px;line-height:1.5;padding-right:40px}
+html[data-theme=dark] .Post-Main .PostIndex-warning{box-shadow:0 2px 4px hsla(0,0%,60%,.06);border:1px solid #2e2e2e}
+.Post-Main .PostIndex-warningTitle{font-weight:600;font-synthesis:style;margin-bottom:8px}
+html[data-ios] .Post-Main .PostIndex-warningTitle{font-weight:500}
+html[data-android] .Post-Main .PostIndex-warningTitle{font-weight:700}
+.Post-Main .PostIndex-warningContent,html[data-theme=dark] .Post-Main .PostIndex-warningContent{color:gray}
+.Post-Main .PostIndex-warningHelp{color:#bfbfbf;position:absolute;right:16px;top:50%;margin-top:-12px}
+html[data-theme=dark] .Post-Main .PostIndex-warningHelp{color:gray}
+.Post-Main .Voters{display:block;margin:14px 0 16px;font-size:14px;color:#8590a6}
+html[data-theme=dark] .Post-Main .Voters{color:#606a80}
+.Post-Main .Annotation-mark{margin:16px auto 0}
+.Post-Main .Post-RichText{margin:20px auto 0;font-size:16px;line-height:1.8;color:#1a1a1a}
+.Post-Main .Post-RichText hr{border-top-color:#ebebeb;border-width:1px}
+@media (-webkit-min-device-pixel-ratio:2),(min-resolution:192dpi){.Post-Main .Post-RichText hr{border-width:.5px}
+}
+@media (-webkit-min-device-pixel-ratio:3),(min-resolution:288dpi){.Post-Main .Post-RichText hr{border-width:.33333px}
+}
+@media (-webkit-min-device-pixel-ratio:4),(min-resolution:384dpi){.Post-Main .Post-RichText hr{border-width:.25px}
+}
+html[data-theme=dark] .Post-Main .Post-RichText hr{border-top-color:#444}
+html[data-theme=dark] .Post-Main .Post-RichText{color:#999}
+.Post-Main .Comments-withPagination{border:none;box-shadow:none;margin:0!important}
+.Post-Main .Post-TopicsReviewer{-webkit-box-flex:0;-ms-flex:0 0 50%;flex:0 0 50%}
+.Post-Main .Post-Topics{margin-bottom:-10px;padding:16px 0}
+.Post-Main .Post-Topics .Topic{height:33px;font-size:13px;line-height:33px;overflow:hidden;margin-bottom:10px}
+.Post-Main .PostIndex-reviewers{margin-top:16px;margin-bottom:16px;-webkit-box-flex:50%;-ms-flex:50%;flex:50%;-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end;text-align:right;color:#8590a6;font-size:14px}
+html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
+.Post-Main .PostIndex-reviewers-left{text-align:right}
+.Post-Main .OpenInAppButton.is-shown{-webkit-transform:translate(-50%,-75px);transform:translate(-50%,-75px)}
+.Post-Main .OpenInAppButton{margin-bottom:constant(safe-area-inset-bottom);margin-bottom:env(safe-area-inset-bottom)}
+/*----for article----------------*/
+
 
 
 
