improve comment feature

--- a/question/templates/question/t_article.html
+++ b/question/templates/question/t_article.html
@@ -4,7 +4,7 @@
 <body class="">
 {% include 'question/header.html' %}
 <div class="LoadingBar"></div>
-<main role="main" class="App-main" data-module="article" data-dfs-main='{}'>
+<main role="main" class="App-main" data-module="article" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","article_id":"{{article.id}}"}'>
 
 <div class="Post-content">
 <!--<img class="TitleImage" src="https://pic4.zhimg.com/v2-5368965cefafe9e71d2c26705e780dc4_1200x500.jpg" alt="“上帝”摩根弗里曼一夜间变性骚扰臭老头">-->
@@ -42,7 +42,7 @@
 </div>
 </div>
 
-<div class="ContentItem-time"><a target="_blank" href="http://zhuanlan.zhihu.com/p/37320311"><span data-tooltip="发布于 2018-05-26 10:40">发布于 2018-05-26</span></a>
+<div class="ContentItem-time"><a target="_blank" href="/article/{{article.id}}"><span data-tooltip="发布于 2018-05-26 10:40">发布于 2018-05-26</span></a>
 </div>
 
 <div class="Post-topicsAndReviewer">
@@ -80,7 +80,7 @@
 <div class="Comments-container">
 <div class="Comments Comments--withEditor Comments-withPagination">
 <div class="Topbar CommentTopbar">
-<div class="Topbar-title"><h2 class="CommentTopbar-title">104 条评论</h2></div>
+<div class="Topbar-title"><h2 class="CommentTopbar-title"><!--0 条评论--></h2></div>
 <div class="Topbar-options">
 <button type="button" class="Button Button--plain Button--withIcon Button--withLabel">
 <span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Switch Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M13.004 7V4.232c0-.405.35-.733.781-.733.183 0 .36.06.501.17l6.437 5.033c.331.26.376.722.1 1.033a.803.803 0 0 1-.601.264H2.75a.75.75 0 0 1-.75-.75V7.75A.75.75 0 0 1 2.75 7h10.254zm-1.997 9.999v2.768c0 .405-.35.733-.782.733a.814.814 0 0 1-.5-.17l-6.437-5.034a.702.702 0 0 1-.1-1.032.803.803 0 0 1 .6-.264H21.25a.75.75 0 0 1 .75.75v1.499a.75.75 0 0 1-.75.75H11.007z" fill-rule="evenodd"></path></svg>
@@ -91,16 +91,15 @@
 <div class="Comments-footer CommentEditor--normal">
 <div class="CommentEditor-input Input-wrapper Input-wrapper--spread Input-wrapper--large Input-wrapper--noPadding">
 <div class="Input Editable">
-<div class="Dropzone RichText ztext" style="min-height: 198px;"><div class="DraftEditor-root"><div class="public-DraftEditorPlaceholder-root"><div class="public-DraftEditorPlaceholder-inner" id="placeholder-t0fb">写下你的评论...</div></div><div class="DraftEditor-editorContainer"><div aria-describedby="placeholder-t0fb" class="notranslate public-DraftEditor-content" contenteditable="true" role="textbox" spellcheck="true" tabindex="0" style="outline: none;white-space: pre-wrap;word-wrap: break-word;"><div data-contents="true"><div class="Editable-unstyled" data-block="true" data-editor="t0fb" data-offset-key="7d283-0-0"><div data-offset-key="7d283-0-0" class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"><span data-offset-key="7d283-0-0"><br data-text="true"></span></div></div></div></div></div></div></div>
-<!--<input multiple="" type="file" accept="image/jpg,image/jpeg,image/png,image/gif" style="display: none;">--><div></div></div></div>
+<div class="Dropzone RichText ztext" style="min-height: 198px;"><div class="DraftEditor-root"><div class="public-DraftEditorPlaceholder-root"><div class="public-DraftEditorPlaceholder-inner">写下你的评论...</div></div><div class="DraftEditor-editorContainer"><div id="comment_edit" class="notranslate public-DraftEditor-content" contenteditable="true" role="textbox" spellcheck="true" tabindex="0" style="outline: none;white-space: pre-wrap;word-wrap: break-word;"></div></div></div></div>
+<div></div></div></div>
 <button disabled="" type="button" class="Button CommentEditor-singleButton Button--primary Button--blue">评论</button>
 </div>
 
 
 <div>
 <div class="CommentList">
-<div class="CommentItem"><div><div class="CommentItem-meta"><span class="UserLink CommentItem-avatar"><div class="Popover"><div id="Popover-85042-10739-toggle"><a class="UserLink-link" target="_blank" href="//www.zhihu.com/people/fan-xi-35-34"><img class="Avatar UserLink-avatar" width="24" height="24" src="" alt="饭稀"></a></div></div></span><span class="UserLink"><a class="UserLink-link" target="_blank" href="//www.zhihu.com/people/fan-xi-35-34">饭稀</a></span><span class="CommentItem-time">1 天前</span></div><div class="RichText ztext CommentItem-content"><p>评论不知道写什么，感觉写什么都是错的。</p></div><div class="CommentItem-footer"><button type="button" class="Button CommentItem-likeBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>31</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 22 16" class="Icon Icon--reply Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M21.96 13.22c-1.687-3.552-5.13-8.062-11.637-8.65-.54-.053-1.376-.436-1.376-1.56V.677c0-.52-.635-.915-1.116-.52L.47 6.67C.18 6.947 0 7.334 0 7.763c0 .376.14.722.37.987 0 0 6.99 6.818 7.442 7.114.453.295 1.136.124 1.135-.5V13c.027-.814.703-1.466 1.532-1.466 1.185-.14 7.596-.077 10.33 2.396 0 0 .395.257.535.257.892 0 .614-.967.614-.967z"></path></g></svg>回复</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="transform: rotate(180deg); height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>踩</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 18 20" class="Icon Icon--report Icon--left" width="11" height="16" aria-hidden="true" style="height: 16px; width: 11px;"><title></title><g><path d="M16.947 1.13c-.633.135-3.927.638-5.697.384-3.133-.45-4.776-2.54-9.95-.888C.305 1.04.025 1.664.025 2.646L0 18.807c0 .3.1.54.304.718.195.202.438.304.73.304.275 0 .52-.102.73-.304.202-.18.304-.418.304-.718v-6.58c4.533-1.235 8.047.668 8.562.864 2.343.893 5.542.008 6.774-.657.397-.178.596-.474.596-.887V1.964c0-.6-.42-.972-1.053-.835z"></path></g></svg>举报</button></div></div></div>
-<div class="CommentItem"><div><div class="CommentItem-meta"><span class="UserLink CommentItem-avatar"><div class="Popover"><div id="Popover-85046-17134-toggle"><a class="UserLink-link" target="_blank" href="//www.zhihu.com/people/na-yiqiao-bu-tong-de-wo"><img class="Avatar UserLink-avatar" width="24" height="24" src="" alt="学习是谦卑的过程"></a></div></div></span><span class="UserLink"><a class="UserLink-link" target="_blank" href="//www.zhihu.com/people/na-yiqiao-bu-tong-de-wo">学习是谦卑的过程</a></span><span class="CommentItem-time">11 小时前</span></div><div class="RichText ztext CommentItem-content">我关关注的是作品而不是人</div><div class="CommentItem-footer"><button type="button" class="Button CommentItem-likeBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>2</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 22 16" class="Icon Icon--reply Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M21.96 13.22c-1.687-3.552-5.13-8.062-11.637-8.65-.54-.053-1.376-.436-1.376-1.56V.677c0-.52-.635-.915-1.116-.52L.47 6.67C.18 6.947 0 7.334 0 7.763c0 .376.14.722.37.987 0 0 6.99 6.818 7.442 7.114.453.295 1.136.124 1.135-.5V13c.027-.814.703-1.466 1.532-1.466 1.185-.14 7.596-.077 10.33 2.396 0 0 .395.257.535.257.892 0 .614-.967.614-.967z"></path></g></svg>回复</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="transform: rotate(180deg); height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>踩</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 18 20" class="Icon Icon--report Icon--left" width="11" height="16" aria-hidden="true" style="height: 16px; width: 11px;"><title></title><g><path d="M16.947 1.13c-.633.135-3.927.638-5.697.384-3.133-.45-4.776-2.54-9.95-.888C.305 1.04.025 1.664.025 2.646L0 18.807c0 .3.1.54.304.718.195.202.438.304.73.304.275 0 .52-.102.73-.304.202-.18.304-.418.304-.718v-6.58c4.533-1.235 8.047.668 8.562.864 2.343.893 5.542.008 6.774-.657.397-.178.596-.474.596-.887V1.964c0-.6-.42-.972-1.053-.835z"></path></g></svg>举报</button></div></div></div>
+<!--<div class="CommentItem"><div><div class="CommentItem-meta"><span class="UserLink CommentItem-avatar"><a class="UserLink-link" target="_blank" href=""><img class="Avatar UserLink-avatar" width="24" height="24" src="" alt=""></a></span><span class="UserLink"><a class="UserLink-link" target="_blank" href="">饭稀</a></span><span class="CommentItem-time">1 天前</span></div><div class="RichText ztext CommentItem-content"><p>评论不知道写什么，感觉写什么都是错的。</p></div><div class="CommentItem-footer"><button type="button" class="Button CommentItem-likeBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>31</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 22 16" class="Icon Icon--reply Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M21.96 13.22c-1.687-3.552-5.13-8.062-11.637-8.65-.54-.053-1.376-.436-1.376-1.56V.677c0-.52-.635-.915-1.116-.52L.47 6.67C.18 6.947 0 7.334 0 7.763c0 .376.14.722.37.987 0 0 6.99 6.818 7.442 7.114.453.295 1.136.124 1.135-.5V13c.027-.814.703-1.466 1.532-1.466 1.185-.14 7.596-.077 10.33 2.396 0 0 .395.257.535.257.892 0 .614-.967.614-.967z"></path></g></svg>回复</button></div></div></div>-->
 </div>
 
 <div class="Pagination comments-pagination">
@@ -124,15 +123,94 @@
 <script>
 function checkComment()
 {
-    $(".public-DraftEditor-content").on("click",function(){
-        console.log("click");
+    var commpent_text="";
+    var input_lock="false";
+    $(".CommentEditor-singleButton").on("mousedown",function(){
+    console.log("click");
+        var post_data={c_type:"article",a_id:g_article_id,c_content:commpent_text};
+        $.post("/ajax/comment/",post_data,function(ret){
+            if("fail"!=ret)
+            {
+                console.log("comment success");
+            }
+        });
     });
-    $(".public-DraftEditor-content").on("input",function(){
-        console.log("input");
+    
+    $(".public-DraftEditor-content").on("click",function(){
+        $(".Comments-footer").addClass("CommentEditor--active");
+        $(".CommentEditor-input").addClass("is-focus");
+    });
+    
+    $(".public-DraftEditor-content").on("keyup",function(){
+        $(".public-DraftEditorPlaceholder-inner").empty();
+        if("false"==input_lock)
+        {
+            commpent_text=$(".public-DraftEditor-content").text();
+            console.log(commpent_text);
+            if(""!=commpent_text)
+            {
+                $(".CommentEditor-singleButton").removeAttr("disabled");
+            }
+            else
+            {
+                $(".CommentEditor-singleButton").attr("disabled","");
+            }
+        }
+    });
+    
+    $(".public-DraftEditor-content").on("compositionstart",function(e){
+        input_lock="true";
+    });
+    $(".public-DraftEditor-content").on("compositionend",function(e){
+        input_lock="false";
+        //$(".public-DraftEditor-content").trigger("keyup");
+    });
+    
+    $(".public-DraftEditor-content").on("blur",function(){
+        console.log("blue");
+        $(".Comments-footer").removeClass("CommentEditor--active");
+        $(".CommentEditor-input").removeClass("is-focus");
+        input_lock="false";
+    });
+
+}
+function appendCommentsElement(ret)
+{
+    var comment_nums=ret.length;
+    $(".CommentTopbar-title").empty().text(""+comment_nums+" 条评论");
+    for( var i in ret)
+    {
+        var comment_id=ret[i][0];
+        var comment_content=ret[i][1];
+        var comment_like_nums=ret[i][2];
+        var comment_parent_id=ret[i][3];
+        var comment_pub_date=ret[i][4].split(".")[0];
+        var comment_author_id=ret[i][5];
+        var comment_author_name=ret[i][6];
+        var comment_author_avatar=ret[i][7];
+        var comment_author_mood=ret[i][8];
+        
+        if(0==comment_parent_id)
+        {
+            var element_data='<div class="CommentItem"><div><div class="CommentItem-meta"><span class="UserLink CommentItem-avatar"><a class="UserLink-link" target="_blank" href="/er/'+comment_author_id+'"><img class="Avatar UserLink-avatar" width="24" height="24" src="'+comment_author_avatar+'" alt="'+comment_author_name+'"></a></span><span class="UserLink"><a class="UserLink-link" target="_blank" href="'+comment_author_id+'">'+comment_author_name+'</a></span><span class="CommentItem-time">'+comment_pub_date+'</span></div><div class="RichText ztext CommentItem-content">'+comment_content+'</div><div class="CommentItem-footer"><button type="button" class="Button CommentItem-likeBtn Button--plain"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>'+comment_like_nums+'</button><button type="button" class="Button CommentItem-hoverBtn Button--plain"><svg viewBox="0 0 22 16" class="Icon Icon--reply Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M21.96 13.22c-1.687-3.552-5.13-8.062-11.637-8.65-.54-.053-1.376-.436-1.376-1.56V.677c0-.52-.635-.915-1.116-.52L.47 6.67C.18 6.947 0 7.334 0 7.763c0 .376.14.722.37.987 0 0 6.99 6.818 7.442 7.114.453.295 1.136.124 1.135-.5V13c.027-.814.703-1.466 1.532-1.466 1.185-.14 7.596-.077 10.33 2.396 0 0 .395.257.535.257.892 0 .614-.967.614-.967z"></path></g></svg>回复</button></div></div></div>';
+            $(".CommentList").append(element_data);
+        }
+    }
+}
+function getComments()
+{
+    var post_data={c_type:"article",a_id:g_article_id};
+    $.post("/ajax/get_comments/",post_data,function(ret){
+        if("fail"!=ret)
+        {
+            console.log("get comments success");
+            appendCommentsElement(ret);
+        }
     });
 }
 $(function()
 {
+    getComments();
     checkComment();
 });
 </script>
