--- a/question/templates/question/t_write.html
+++ b/question/templates/question/t_write.html
@@ -159,7 +159,7 @@ $(function()
         disableDragAndDrop:true,
         callbacks: {
             onImageUpload: function(files){
-                scaleAndUploadImage("forQuestion",files[0],720);
+                scaleAndUploadImage("forWrite",files[0],720);
             }
         }
     });
