prepare mobile`s write and comment feature

--- a/question/templates/question/t_article_mobile.html
+++ b/question/templates/question/t_article_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light">
-{% include 'question/head.html' %}
+{% include 'question/head_mobile.html' %}
 <body class="">
-{% include 'question/header.html' %}
+{% include 'question/header_mobile.html' %}
 <div class="LoadingBar"></div>
 <main role="main" class="App-main" data-module="article" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","article_id":"{{article.id}}","article_like_nums":"{{article.like_nums}}","article_comment_nums":"{{article.comment_nums}}","article_pub_date":"{{article_pub_date}}","followed":"{{followed}}","er_id":"{{article.author.id}}","er_sexual":"{{article.author.userprofile.sexual}}"}'>
 
