--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
-{% include 'question/head.html' %}
+{% include 'question/head_mobile.html' %}
 <body class="Entry-body">
-{% include 'question/header.html' %}
+{% include 'question/header_mobile.html' %}
 
 <div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;">
 </div>
