--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -9,12 +9,11 @@
 
 
 <!--------------------main---------------------->
-<main role="main" class="App-main"  data-module="question" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_answer_nums":"{{context_question.answer_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
+<main role="main" class="App-main"  data-module="question" data-question-detail="{{context_question.detail}}" data-answer-content="{{push_answer.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{context_question.id}}","question_title":"{{context_question.title}}","question_answer_nums":"{{context_question.answer_nums}}","question_followed":"{{followed}}","answer_id":"{{push_answer.id}}","answer_like_nums":"{{push_answer.like_nums}}","answer_comment_nums":"{{push_answer.comment_nums}}","author_id":"{{push_answer.author.id}}","author_name":"{{push_answer.author.first_name}}","author_avatar":"{{push_answer.author.userprofile.avatar}}","author_mood":"{{push_answer.author.userprofile.mood}}"}'>
         
-<div class="QuestionPage" data-question-id="{{ context_question.id }}" data-question-answer-nums="{{ context_question.answer_nums }}">
+<div class="QuestionPage">
     <div>
-        <div class="QuestionStatus">
-        </div>
+        <div class="QuestionStatus"></div>
         
         <div class="QuestionHeader">
         <div class="QuestionHeader-content">
@@ -34,34 +33,14 @@
         </div>
         </div>
         
-        <h1 class="QuestionHeader-title">{{ context_question.title }}</h1>
-        <div>
-        <div class="QuestionHeader-detail">
-        <div class="QuestionRichText QuestionRichText--collapsed">
-        <div>
-        <span class="RichText">
-        </span>
-        </div>
-        </div>
-        </div>
-        </div>
+        <h1 class="QuestionHeader-title"></h1>
+        <div class="QuestionHeader-detail"><div class="QuestionRichText QuestionRichText--collapsed"><div><span class="RichText"></span></div></div></div>
         </div>
         
         <div class="QuestionHeader-side">
         <div class="QuestionHeader-follow-status">
-        <div class="QuestionFollowStatus">
-        <div class="NumberBoard QuestionFollowStatus-counts">
-        <button class="Button NumberBoard-item Button--plain" type="button">
-        <div class="NumberBoard-name">关注者</div>
-        <div class="NumberBoard-value" data-update-value-type="question-followed">{{context_question.follower_nums}}</div>
-        </button>
-        <div class="NumberBoard-divider">
-        </div>
-        <div class="NumberBoard-item">
-        <div class="NumberBoard-name">被浏览</div>
-        <div class="NumberBoard-value">{{context_question.hot}}</div>
-        </div>
-        </div>
+        <div class="QuestionFollowStatus">        
+        <div class="NumberBoard QuestionFollowStatus-counts NumberBoard--divider"><button type="button" class="Button NumberBoard-item Button--plain"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName" >关注者</div><strong class="NumberBoard-value NumberBoard-itemValue" data-update-value-type="question-followed">{{context_question.follower_nums}}</strong></div></button><div class="NumberBoard-item"><div class="NumberBoard-itemInner"><div class="NumberBoard-itemName">被浏览</div><strong class="NumberBoard-itemValue">{{context_question.hot}}</strong></div></div></div>      
         </div>
         </div>
         </div>
@@ -72,26 +51,13 @@
         <div class="QuestionHeader-main QuestionHeader-footer-main">
         
         <div class="QuestionButtonGroup">
-        {% ifequal followed "true" %}
-        <button class="Button FollowButton Button--primary Button--default" data-follow-type="question" data-followed="true" data-question-id="{{ context_question.id }}" type="button">已关注</button>
-        {% else %}
-        <button class="Button FollowButton Button--primary Button--blue" data-follow-type="question" data-followed="false" data-question-id="{{ context_question.id }}" type="button">关注</button>
-        {% endifequal %}
+        <button class="Button FollowButton Button--primary" data-follow-type="question" type="button"></button>
         <button class="Button Button--blue" type="button" onclick="showAnswerToolbar()">
         <svg viewBox="0 0 12 12" class="Icon Button-icon Icon--modify" style="height:16px;width:14px;" width="14" height="16" aria-hidden="true"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g>
         </svg>写回答</button>
         </div>
         
-        <div class="QuestionHeaderActions">
-        <div class="QuestionHeader-Comment">
-        <button class="Button Button--plain Button--withIcon Button--withLabel" type="button">
-        <span style="display:inline-flex;align-items:center;">
-                                &#8203;
-        <svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg>
-        </span>47 条评论
-        </button>
-        </div>
-        
+        <div class="QuestionHeaderActions">        
         <div class="Popover ShareMenu">
         <div class="" id="Popover-18753-20337-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-18753-20337-content">
         <button class="Button Button--plain Button--withIcon Button--withLabel" type="button">
@@ -129,21 +95,15 @@
         <div class="AnswerAdd-header">
         <div class="AuthorInfo AnswerAdd-info">
         <span class="UserLink AuthorInfo-avatarWrapper">
-        <img class="Avatar AuthorInfo-avatar" width="38" height="38" src="{{user.userprofile.avatar}}" srcset="{{user.userprofile.avatar}}" alt="{{user.username}}">
+        <img class="Avatar AuthorInfo-avatar" width="38" height="38" src="" alt="">
         </span>
         <div class="AuthorInfo-content">
         <div class="AuthorInfo-head">
-        <span class="UserLink AuthorInfo-name">{{user.first_name}}</span>
-        </div>
-        <div class="AuthorInfo-detail">
-        <div class="AuthorInfo-badge">
-        <button class="Button ModifyButton AnswerAdd-topicBiosButton Button--link" type="button">
-        <svg viewBox="0 0 12 12" class="Icon ModifyButton-icon Icon--modify" width="12" height="16" aria-hidden="true" style="height: 16px; width: 12px;"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g></svg>编辑话题经验</button>
-        </div>
-        </div>       
+        <span class="UserLink AuthorInfo-name"></span>
+        </div>     
         </div>
         
-        <div>
+        <div style="float:right">
         <button  class="Button Button--plain" type="button" onclick="hideAnswerToolbar()">
         <svg class="Zi Zi--Close " fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
         </div>
@@ -178,24 +138,24 @@
         <div id="listArea">
         {% if push_answer %}
         <div class="Card">
-        <a class="QuestionMainAction" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
+        <a class="QuestionMainAction" href=""></a>
         </div>
 
         <div class="Card AnswerCard">
         <div class="QuestionAnswer-content">
-        <div class="ContentItem AnswerItem" data-answer-id="{{push_answer.id}}" data-comment-nums="{{push_answer.comment_nums}}">
+        <div class="ContentItem AnswerItem">
         <div class="ContentItem-meta">
         <div class="AnswerItem-meta AnswerItem-meta--related">
         <div class="AuthorInfo">
         <span class="UserLink AuthorInfo-avatarWrapper">
-        <a class="UserLink-link PeoplePopover" href="/er/{{push_answer.author.id}}" data-author-id="{{push_answer.author.id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
-        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{push_answer.author.userprofile.avatar}}" srcset="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.first_name}}">
+        <a class="UserLink-link PeoplePopover" href="" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
+        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="" alt="">
         </a>
         </span>
         <div class="AuthorInfo-content">
         <div class="AuthorInfo-head">
         <span class="UserLink AuthorInfo-name">
-        <a class="UserLink-link" href="/er/{{push_answer.author.id}}">{{push_answer.author.first_name}}</a>
+        <a class="UserLink-link" href=""></a>
         </span>
         </div>
         <div class="AuthorInfo-detail">
@@ -205,10 +165,7 @@
         </div>
         </div>
         <div class="AnswerItem-extraInfo">
-        <span class="Voters">
-        <button class="Button Button--plain" type="button">
-        {{push_answer.like_nums}} 人赞同了该回答</button>
-        </span>
+        <span class="Voters"><button class="Button Button--plain" type="button"></button></span>
         </div>
         </div>
         </div>
@@ -216,7 +173,7 @@
         <div class="RichContent RichContent--unescapable">
          <div class="RichContent-expand">
             <div class="RichContent-inner">
-                <span class="RichText CopyrightRichText-richText" data-content="{{push_answer.content}}">{{push_answer.content|safe}}</span>
+                <span class="RichText CopyrightRichText-richText"></span>
             </div>
             <button class="Button ContentItem-more ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
           </div>
@@ -252,13 +209,13 @@
         </div>
                 
         <div class="Card">
-        <a class="QuestionMainAction" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
+        <a class="QuestionMainAction" href="></a>
         </div>
         {% else %}
         <div class="Card AllAnswers">
         <div class="List">
         <div class="List-header">
-        <h4 class="List-headerText">全部 {{context_question.answer_nums}} 个回答</h4>
+        <h4 class="List-headerText"></h4>
         <div class="List-headerOptions">
         </div>
         </div>
