--- a/question/templates/question/t_topic_mobile.html
+++ b/question/templates/question/t_topic_mobile.html
@@ -77,7 +77,8 @@
 </div>
 </div>
 </div>
-<button class="OpenInAppButton OpenInApp is-shown">App 内打开</button></div>
+<!--<button class="OpenInAppButton OpenInApp is-shown">App 内打开</button>-->
+</div>
 </main>
 </div>
 </div>
