--- a/static/common/mobile_main.css
+++ b/static/common/mobile_main.css
@@ -685,7 +685,7 @@ label {
     min-height: 660px;
 }
 .Layout-main {
-    margin: 47px auto 0;
+    margin: 0 auto 0;
     padding: 0;
     width: auto;
     z-index: 1;
@@ -966,9 +966,11 @@ html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
 
 /************for question page****************/
 .MobileQuestionButtonGroup .Button {
-    margin-right: 10px;
+    margin-right: 16px;
 }
-
+.MobileQuestionButtonGroup .FollowButton {
+    min-width: 50px;
+}
 .QuestionHeader .Topic {
     padding-bottom: 0px !important;
     margin-bottom: 10px;
