--- a/question/templates/question/ask_modal_mobile.html
+++ b/question/templates/question/ask_modal_mobile.html
@@ -23,11 +23,11 @@
 
                             <input id="hide_for_submit" type="hidden" name="topics" value="null123">
                 
-                            <div class="QuestionAsk-section QuestionAsk-DetailSection">问题描述（可选）:<textarea id="summernote_question" name="detail" 1rows="5" 1cols="70" 1maxlength="160"></textarea>              
+                            <div class="QuestionAsk-section QuestionAsk-DetailSection">问题描述（可选）:<textarea id="summernote_question" name="tmpDetail" 1rows="5" 1cols="70" 1maxlength="160"></textarea><input type="hidden" name="detail" value="">              
                             </div>
                            
                             <div class="ModalButtonGroup QuestionAsk-buttonGroup ModalButtonGroup--vertical">
-                                <button class="1Button 1Button--primary 1Button--green btn btn-success" type="submit" form="form_ask">提交问题</button>
+                                <button class="Button Button--primary Button--blue" type="button" form="form_ask" disabled>提交问题</button>
                             </div>
                         </form>
                     </div>
