--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -52,7 +52,7 @@
         
         <div class="QuestionButtonGroup">
         <button class="Button FollowButton Button--primary" data-follow-type="question" type="button"></button>
-        <button class="Button Button--blue" type="button" onclick="showAnswerToolbar()">
+        <button class="ShowAnswerBar-nouse Button Button--blue" type="button">
         <svg viewBox="0 0 12 12" class="Icon Button-icon Icon--modify" style="height:16px;width:14px;" width="14" height="16" aria-hidden="true"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g>
         </svg>写回答</button>
         </div>
@@ -104,7 +104,7 @@
         </div>
         
         <div style="float:right">
-        <button  class="Button Button--plain" type="button" onclick="hideAnswerToolbar()">
+        <button  class="HideAnswerBar-nouse Button Button--plain" type="button">
         <svg class="Zi Zi--Close " fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
         </div>
         
@@ -114,7 +114,7 @@
         </div>
         
         <div>
-        <!--<form action="/question/{{ context_question.id }}/" method="post">-->
+        <!--<form action="/question/id/" method="post">-->
         <!--{% csrf_token %}-->
             <textarea id="summernote_answer" name="content" 1rows="5" 1cols="70" 1maxlength="160" 1placeholder="写回答..."></textarea>
             <div>
@@ -122,14 +122,11 @@
             <div class="AnswerForm-footerContent AnswerForm-container">
             <div class="AnswerForm-status"></div>
             <div class="AnswerForm-footerRight">
-            <button class="AnswerForm-submit  btn btn-success" type="button" onclick="submitAnswer()">提交回答</button>
+            <button class="AnswerForm-submit  Button Button--primary Button--blue" type="button" disabled>提交回答</button>
             </div>
             </div>
             </div>
             </div>
-        	<!--<button type="button"  class="btn btn-success btn-lg" onclick="submitAnswer()">
-				提交回答
-			</button>-->
         <!--</form>-->
         </div>
         </div>
