--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -34,11 +34,12 @@
 </div>
 
 <div class="Wirte-content">
-<textarea id="summernote_write" name="writeContent"></textarea>              
+<textarea id="summernote_write" name="tmpWriteContent"></textarea> 
+<input type="hidden" name="writeContent" value="">              
 </div>
 
 <div style="display:flex;justify-content:center;">
-<button class="WritePost Button Button--primary Button--blue" disabled type="submit">发表</button>
+<button class="WritePost Button Button--primary Button--blue" disabled type="button">发表</button>
 </div>
 
 </form>
